[gd_scene load_steps=4 format=3 uid="uid://dxgw7d08xae35"]

[ext_resource type="Script" path="res://scenes/ui_nodes/AccessibilityFocus.gd" id="1"]
[ext_resource type="Script" path="res://scenes/popups/first_time/EmulatorsSection.gd" id="2"]
[ext_resource type="Script" path="res://source/utils/ScrollHandler.gd" id="4"]

[node name="EmulatorsSection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="IntroLabel" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "RetroHub is a gaming library frontend, so it does not come with emulators bundled. You will have to install and setup emulators for each system.
RetroHub will then detect existing emulators to launch your games without any configuration required. You can check here the supported emulators per system."
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="AccessibilityFocus" type="Node" parent="VBoxContainer/IntroLabel"]
script = ExtResource("1")

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Systems" type="OptionButton" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ScrollHandler" type="Control" parent="VBoxContainer/Systems"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4")

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="EmulatorInfoTab" type="TabContainer" parent="VBoxContainer/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
tabs_visible = false

[node name="ScrollHandler" type="Control" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
script = ExtResource("4")

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="NextButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Next"

[connection signal="item_selected" from="VBoxContainer/Systems" to="." method="_on_Systems_item_selected"]
[connection signal="pressed" from="VBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]
